--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </video>
         </div>
         <p>I knew you'd say yes! ❤️</p>
-        <p style="margin-top: 20px; font-size: 1.2em;">I love you, Sumiya! 💕</p>
+        <p style="margin-top: 20px; font-size: 1.2em;">I love you, Baby! 💕</p>
     </div>
 
     <script>
@@ -263,7 +263,7 @@
             "Paki baat hai? 🥺",
             "Jaaaaaaaanu kion? 😢",
             "Think again! 💭",
-            "Don't be silly! 😊",
+            "Acha Marzi hai Jaanu! 😢",
             "Wrong button! 👆",
             "Try the other one! 👉",
             "The YES button is prettier! 💝",
