--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
         .intro-video-container video {
             width: 100%;
-            height: auto;
+            height: 100px;
             display: block;
         }
     </style>
